--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
         <item quantity="one">Plural and dynamic : %1$d word</item>
         <item quantity="other">Plural and dynamic : Found %1$d words</item>
     </plurals>
+
+    <string name="accelerometer_value_x" translatable="false">Axe X : %1$.2f</string>
+    <string name="accelerometer_value_y" translatable="false">Axe Y : %1$.2f</string>
+    <string name="accelerometer_value_z" translatable="false">Axe Z : %1$.2f</string>
 </resources>
